lcb: Improved test representation of spike tests